[gd_scene load_steps=9 format=3 uid="uid://dubv13cak6mjn"]

[ext_resource type="Script" uid="uid://c8w7tuxkacujc" path="res://Scripts/monsters.gd" id="1_t5uq8"]
[ext_resource type="Texture2D" uid="uid://bk8qao521iy21" path="res://Assets/Sprites/Spritesheet.png" id="3_uw55x"]
[ext_resource type="Script" uid="uid://s244dhbmprhx" path="res://Scripts/node_pool.gd" id="4_n5x3l"]
[ext_resource type="PackedScene" uid="uid://dgm03pu34032m" path="res://Scenes/boulder.tscn" id="5_7kbme"]
[ext_resource type="PackedScene" uid="uid://d3rcusi22khhd" path="res://Scenes/potion.tscn" id="5_vc312"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_sfdtf"]
size = Vector2(18, 25)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_pegji"]
bg_color = Color(0.201527, 0.201527, 0.201527, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_5abox"]
bg_color = Color(0.94902, 0, 0, 1)

[node name="ogre" type="CharacterBody2D" groups=["monsters"]]
collision_layer = 2
collision_mask = 23
script = ExtResource("1_t5uq8")
shoot_rate = 2.5
current_health = 30
max_health = 30
bullet_scene = ExtResource("5_7kbme")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2(1, -2.5)
shape = SubResource("RectangleShape2D_sfdtf")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(1, -2.5)
texture = ExtResource("3_uw55x")
region_enabled = true
region_rect = Rect2(1311, 64, 33, 32)

[node name="muzzle" type="Node2D" parent="."]

[node name="bullet_pool" type="Node" parent="."]
script = ExtResource("4_n5x3l")
node_scene = ExtResource("5_7kbme")

[node name="potion_pool" type="Node" parent="."]
script = ExtResource("4_n5x3l")
node_scene = ExtResource("5_vc312")

[node name="avoidance_ray" type="RayCast2D" parent="."]
target_position = Vector2(64, 0)
collision_mask = 51

[node name="health_bar" type="ProgressBar" parent="."]
offset_left = -6.0
offset_top = -22.0
offset_right = 10.0
offset_bottom = -20.0
theme_override_styles/background = SubResource("StyleBoxFlat_pegji")
theme_override_styles/fill = SubResource("StyleBoxFlat_5abox")
rounded = true
show_percentage = false
